fix: adjust comments list so the last comment is visible

--- a/src/app/posts/comments/_comment-list.scss
+++ b/src/app/posts/comments/_comment-list.scss
@@ -42,6 +42,7 @@
     &__comment-list {
       background: transparent;
       padding: 0 $base-padding;
+      margin-bottom: $base-padding*5;
     }
     &__comment-avatar {
       width: 55px;
